# recursion

./: .gitignore  Cargo.toml  README.md  build_docs.sh
benches/: expr.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/recursion/: all.html  enum.PartiallyApplied.html  index.html  trait.Collapsible.html  trait.CollapsibleExt.html  trait.Expandable.html  trait.ExpandableExt.html  trait.MappableFrame.html
docs/src/recursion/: frame.rs.html  lib.rs.html  recursive.rs.html
docs/src/recursion/recursive/: collapse.rs.html  expand.rs.html
examples/: grep.rs
examples/filetree/: build.rs  mod.rs  search.rs
exprs/: Cargo.toml
exprs/proptest-regressions/: lib.txt
exprs/src/: db.rs  lib.rs  linked_list.rs  main.rs  recursive.rs  recursive_abstract.rs  recursive_naive.rs
html/: d3js_execution_tree_visualizer.html
proc-macro-recursive/: Cargo.toml
proc-macro-recursive/src/: lib.rs
proptest-regressions/examples/expr/: eval.txt  monomorphic.txt
recursion/: Cargo.toml  README.md
recursion-filetree-example/: grep.rs
recursion-schemes/: .gitignore  Cargo.toml
recursion-schemes/src/: frame.rs  functor.rs  join_future.rs  lib.rs  recursive.rs
recursion-schemes/src/experimental/: compact.rs  fix.rs  frame.rs  mod.rs
recursion-schemes/src/experimental/frame/: compose.rs
recursion-schemes/src/experimental/recursive/: collapse.rs  expand.rs
recursion-schemes/src/recursive/: collapse.rs  expand.rs
recursion-tests/: Cargo.toml
recursion-tests/benches/: expr.rs  list.rs
recursion-tests/proptest-regressions/expr/: eval.txt
recursion-tests/src/: expr.rs  lib.rs  linked_list.rs
recursion-tests/src/expr/: eval.rs  monomorphic.rs  naive.rs
recursion-visualize/: Cargo.toml
recursion-visualize/examples/: expr.rs
recursion-visualize/src/: lib.rs  visualize.rs
recursion/src/: experimental.rs  frame.rs  lib.rs  map_layer.rs  recursive.rs  stack_machine.rs
recursion/src/experimental/: frame.rs
recursion/src/recursive/: collapse.rs  expand.rs
recursion/src/recursive_tree/: stack_machine_eval.rs
src/: db.rs  functor.rs  lazy_async.rs  lib.rs  main.rs  map_layer.rs  recursive.rs  recursive_block_alloc.rs  recursive_dfs.rs  recursive_naive.rs  recursive_tree.rs  stack_machine.rs  stack_machine_lazy.rs
src/examples/: expr.rs  filetree.rs  git.rs  linked_list.rs  mod.rs
src/examples/expr/: db.rs  eval.rs  monomorphic.rs  naive.rs  typed_eval.rs
src/examples/filetree/: build.rs  grep.rs
src/recursive/: gat.rs
src/recursive_tree/: arena_eval.rs  block_allocation.rs  dfs_stack_machine.rs  stack_machine_eval.rs
src/stack_machine/: experimental.rs  visualize.rs
