[package]
name = "recursion"
version = "0.2.0"
edition = "2021"
description = "cache-aware recursion schemes in rust"
license = "MIT OR Apache-2.0"

[features]
default = []
expr_example = []

[dependencies]
futures = "0.3"

[dev-dependencies]
clap = {version = "3.2", features = ["derive"]}
colored = "2"
criterion = {version = "0.3", features = ["html_reports"]}
proptest = "1.0"
regex = "1"
tokio = {version = "1.19", features = ["rt", "rt-multi-thread", "fs", "macros", "io-util"]}

[[bench]]
name = "expr"
harness = false
required-features = ["expr_example"]
