[package]
name = "recursion"
version = "0.3.1"
edition = "2021"
description = "cache-aware stack safe recursion"
license = "MIT OR Apache-2.0"

[features]
default = []
expr_example = []
experimental = ["json", "serde", "serde_json"]

[dependencies]
futures = "0.3"
json = {version = "0.12", optional = true}
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = {version = "1.0", optional = true}

[dev-dependencies]
clap = {version = "3.2", features = ["derive"]}
colored = "2"
criterion = {version = "0.3", features = ["html_reports"]}
proptest = "1.0"
regex = "1"
tokio = {version = "1.19", features = ["rt", "rt-multi-thread", "fs", "macros", "io-util"]}

[[bench]]
name = "expr"
harness = false
required-features = ["expr_example", "experimental"]
