[package]
name = "recursion-schemes"
version = "0.1.3"
edition = "2021"
description = "cache-aware stack safe recursion (this is the really haskell brained one)"
license = "MIT OR Apache-2.0"


[features]
default = []
experimental = ["tokio", "futures"]

[dependencies]
futures = {version = "0.3", optional = true}
tokio = {version = "1.19", features = ["rt", "rt-multi-thread", "fs", "macros", "io-util", "sync"], optional = true}
