[package]
name = "recursion-tests"
version = "0.3.5"
edition = "2021"
description = "tests for the recursion and recursion-schemes library"
license = "MIT OR Apache-2.0"

[dependencies]
recursion = {path = "../recursion", version = "0.4"}
recursion-schemes = {path = "../recursion-schemes", version = "0.1"}
proptest = "1.0"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
tokio = {version = "1.19", features = ["rt", "rt-multi-thread", "fs", "macros", "io-util"]}

[[bench]]
name = "expr"
harness = false
