[package]
name = "recursion-tests"
version = "0.3.5"
edition = "2021"
description = "tests for the recursion and recursion-schemes library"
license = "MIT OR Apache-2.0"

[dependencies]
recursion = {path = "../recursion", version = "0.4", features = ["experimental"]}
recursion-schemes = {path = "../recursion-schemes", version = "0.1", features = ["experimental"]}
proptest = "1.0"
futures = "0.3"
genawaiter = "0.99"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
tokio = {version = "1.19", features = ["rt", "rt-multi-thread", "fs", "macros", "io-util", "sync"]}

[[bench]]
name = "expr"
harness = false
