[package]
name = "recursion-visualize"
version = "0.3.5"
edition = "2021"
description = "cache-aware stack safe recursion"
license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.3"
json = {version = "0.12"}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
recursion-schemes = {path = "../recursion-schemes", version = "0.1.3"}
