[package]
name = "recursion-visualize"
version = "0.5.0"
edition = "2021"
description = "visualized cache-aware stack safe recursion"
license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.3"
json = {version = "0.12"}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
recursion = {path = "../recursion", version = "0.5"}
