[package]
name = "recursion-visualize"
version = "0.5.0"
edition = "2021"
description = "visualized cache-aware stack safe recursion"
license = "MIT OR Apache-2.0"


[features]
default = ["enabled"]
enabled = ["json", "serde", "serde_json"]

[dependencies]
json = {version = "0.12", optional = true}
serde = { version = "1.0", features = ["derive"] , optional = true}
serde_json = {version = "1.0", optional = true}
recursion = {path = "../recursion", version = "0.5.2"}
